2003-06-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* GraphicsMagick 1.0.2 released.
	* coders/x.c (RegisterXImage): Only register the X coder if HasX11
	is defined.
	* libxml/libxml2.def: Since VisualMagick configure is not fixed
	yet, add "LIBRARY CORE_RL_libxml_.dll" to the top of the file to
	at least cover the release build case.

2003-06-07  Glenn Randers-Pehrson <randeg@alum.rpi.edu>

	* magick/image.c (GetImageGeometry) Y was a function of width
	instead of height when processing EastGravity or WestGravity
	(bug report from Cristy).

2003-06-06  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/log.c (ReadConfigureFile): Move event parsing to
	ParseEvents funtion.
	(SetLogEventMask): Move event parsing to
	ParseEvents funtion.
	* PerlMagick/t/subroutines.pl (testMontage): It seems that passing
	an empty set of options to the SetImage method corrupts the image
	options (surely a PerlMagick bug), so don't invoke SetImage unless
	there are options to set.
	* magick/utility.c (GetGeometry): Validate that the geometry
	string only contains valid characters.
	* Magick++: Updates to cause exceptions to be thrown if a bad
	geometry specification is supplied.

2003-06-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/xpm.c (RegisterXPMImage): Module registration for PICON
	should have been XPM.  Thanks to John Cristy for noticing this
	bug.
	* coders/psd.c (ReadPSDImage): Applied John Cristy's patch to fix
	a index calculation bug which is evident when QuantumDepth>8.

2003-06-02  Glenn Randers-Pehrson <randeg@alum.rpi.edu>

	* png.c: Merge bugfixes from 1.1 branch:
	* MNG encoder failed to set the JNG bit in the simplicity profile.
	* MNG encoder failed to write FRAM chunks when all images were JNG.
	* JNG encoder wrote the wrong alpha_sample_depth for opaque images. 
	* coders/png.c: png.c would dump core when writing a grayscale
	image in png24 or png32 format.

2003-06-02  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
