@@ -64,7 +64,8 @@ AC_DEFUN([RSSH_CHECK_SUNPRO_CC],
 [AC_LANG_SAVE
  AC_LANG_CPLUSPLUS
  AC_TRY_COMPILE([],
-[#ifndef __SUNPRO_CC
+[#undef inline
+#ifndef __SUNPRO_CC
 # include "error: this is not Sun C++ Compiler."
 #endif
 ],
@@ -98,7 +99,8 @@ AC_DEFUN([RSSH_CHECK_SUNPRO_C],
 [AC_LANG_SAVE
  AC_LANG_C
  AC_TRY_COMPILE([],
-[#ifndef __SUNPRO_C
+[#undef inline
+#ifndef __SUNPRO_C
 # include "error: this is not Sun C Compiler."
 #endif
 ],
@@ -130,7 +132,7 @@ AC_DEFUN([AC_CXX_BOOL],
 ac_cv_cxx_bool,
 [AC_LANG_SAVE
  AC_LANG_CPLUSPLUS
- AC_TRY_COMPILE([
+ AC_TRY_COMPILE([#undef inline
 int f(int  x){return 1;}
 int f(char x){return 1;}
 int f(bool x){return 1;}
@@ -155,7 +157,11 @@ AC_DEFUN([AC_CXX_CONST_CAST],
 ac_cv_cxx_const_cast,
 [AC_LANG_SAVE
  AC_LANG_CPLUSPLUS
- AC_TRY_COMPILE(,[int x = 0;const int& y = x;int& z = const_cast<int&>(y);return z;],
+ AC_TRY_COMPILE(,[#undef inline
+int x = 0;
+const int& y = x;
+int& z = const_cast<int&>(y);
+return z;],
  ac_cv_cxx_const_cast=yes, ac_cv_cxx_const_cast=no)
  AC_LANG_RESTORE
 ])
@@ -177,7 +183,7 @@ AC_DEFUN([AC_CXX_DEFAULT_TEMPLATE_PARAMETERS],
 ac_cv_cxx_default_template_parameters,
 [AC_LANG_SAVE
  AC_LANG_CPLUSPLUS
- AC_TRY_COMPILE([
+ AC_TRY_COMPILE([#undef inline
 template<class T = double, int N = 10> class A {public: int f() {return 0;}};
 ],[A<float> a; return a.f();],
  ac_cv_cxx_default_template_parameters=yes, ac_cv_cxx_default_template_parameters=no)
@@ -203,7 +209,8 @@ AC_DEFUN([AC_CXX_EXCEPTIONS],
 ac_cv_cxx_exceptions,
 [AC_LANG_SAVE
  AC_LANG_CPLUSPLUS
- AC_TRY_COMPILE(,[try { throw  1; } catch (int i) { return i; }],
+ AC_TRY_COMPILE(,[#undef inline
+try { throw  1; } catch (int i) { return i; }],
  ac_cv_cxx_exceptions=yes, ac_cv_cxx_exceptions=no)
  AC_LANG_RESTORE
 ])
@@ -225,7 +232,8 @@ AC_DEFUN([AC_CXX_EXPLICIT],
 ac_cv_cxx_explicit,
 [AC_LANG_SAVE
  AC_LANG_CPLUSPLUS
- AC_TRY_COMPILE([class A{public:explicit A(double){}};],
+ AC_TRY_COMPILE([#undef inline
+class A{public:explicit A(double){}};],
 [double c = 5.0;A x(c);return 0;],
  ac_cv_cxx_explicit=yes, ac_cv_cxx_explicit=no)
  AC_LANG_RESTORE
@@ -249,7 +257,8 @@ ac_cv_cxx_have_std,
 [AC_REQUIRE([AC_CXX_NAMESPACES])
  AC_LANG_SAVE
  AC_LANG_CPLUSPLUS
- AC_TRY_COMPILE([#include <iostream>
+ AC_TRY_COMPILE([#undef inline
+#include <iostream>
 #include <map>
 #include <iomanip>
 #ifdef HAVE_NAMESPACES
@@ -304,6 +313,7 @@ ac_cv_cxx_member_templates_outside_class,
 [AC_LANG_SAVE
  AC_LANG_CPLUSPLUS
  AC_TRY_COMPILE([
+#undef inline
 template<class T, int N> class A
 { public :
   template<int N2> A<T,N> operator=(const A<T,N2>& z);
@@ -336,6 +346,7 @@ ac_cv_cxx_mutable,
 [AC_LANG_SAVE
  AC_LANG_CPLUSPLUS
  AC_TRY_COMPILE([
+#undef inline
 class A { mutable int i;
           public:
           int f (int n) const { i = n; return i; }
@@ -363,8 +374,10 @@ AC_DEFUN([AC_CXX_NAMESPACES],
 ac_cv_cxx_namespaces,
 [AC_LANG_SAVE
  AC_LANG_CPLUSPLUS
- AC_TRY_COMPILE([namespace Outer { namespace Inner { int i = 0; }}],
-                [using namespace Outer::Inner; return i;],
+ AC_TRY_COMPILE([#undef inline
+namespace Outer { namespace Inner { int i = 0; }}],
+                [#undef inline
+using namespace Outer::Inner; return i;],
  ac_cv_cxx_namespaces=yes, ac_cv_cxx_namespaces=no)
  AC_LANG_RESTORE
 ])
@@ -387,7 +400,7 @@ AC_DEFUN([AC_CXX_NEW_FOR_SCOPING],
 ac_cv_cxx_new_for_scoping,
 [AC_LANG_SAVE
  AC_LANG_CPLUSPLUS
- AC_TRY_COMPILE(,[
+ AC_TRY_COMPILE(,[#undef inline
   int z = 0;
   for (int i = 0; i < 10; ++i)
     z = z + i;
@@ -413,7 +426,8 @@ AC_DEFUN([AC_CXX_STATIC_CAST],
 ac_cv_cxx_static_cast,
 [AC_LANG_SAVE
  AC_LANG_CPLUSPLUS
- AC_TRY_COMPILE([#include <typeinfo>
+ AC_TRY_COMPILE([#undef inline
+#include <typeinfo>
 class Base { public : Base () {} virtual void f () = 0; };
 class Derived : public Base { public : Derived () {} virtual void f () {} };
 int g (Derived&) { return 0; }],[
@@ -439,7 +453,8 @@ AC_DEFUN([AC_CXX_TEMPLATES],
 ac_cv_cxx_templates,
 [AC_LANG_SAVE
  AC_LANG_CPLUSPLUS
- AC_TRY_COMPILE([template<class T> class A {public:A(){}};
+ AC_TRY_COMPILE([#undef inline
+template<class T> class A {public:A(){}};
 template<class T> void f(const A<T>& ){}],[
 A<double> d; A<int> i; f(d); f(i); return 0;],
  ac_cv_cxx_templates=yes, ac_cv_cxx_templates=no)
