@@ -57,6 +57,7 @@
 
 <UL>
   <LI> GraphicsMagick 1.0.2 released.
+  <LI> acinclude.m4: Add '#undef inline' in front of C++ tests.
   <LI> coders/x.c (RegisterXImage): Only register the X coder if HasX11
         is defined.<BR>
   <LI> libxml/libxml2.def: Since VisualMagick configure is not fixed
